tests/pos/simple/fun-03.ts

/*@ foo :: (x:number) => () => { undefined | true } */
function foo(x:number) {
  var f = /*@ <anonymous> () => undefined */ function() { return undefined }
  return f;
}
